<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Practise.HistoryQuestion.HistoryMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/History_QuestionNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/QuestionNumber" />

        <TextView
            android:id="@+id/History_Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question"
            android:textSize="18sp">

            <requestFocus></requestFocus>
        </TextView>

        <RadioGroup
            android:id="@+id/History_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">

            <RadioButton
                android:id="@+id/History_answerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChoiceA"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/History_answerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChoiceB"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/History_answerC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChoiceC"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/History_answerD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChoiceD"
                android:textSize="15sp" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/History_c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MutiChoiceA"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/History_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MutiChoiceB"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/History_c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MutiChoiceC"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/History_c4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MutiChoiceD"
            android:textSize="15sp" />

        <!-- android:text="答案" -->
        <TextView
            android:id="@+id/History_text_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
        <!-- android:text="解析" -->
        <TextView
            android:id="@+id/History_explaination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />


    </LinearLayout>

    <SeekBar
        android:id="@+id/History_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_History_answer"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-71dp"
        android:layout_marginBottom="71dp"
        android:progress="0" />

    <Button
        android:id="@+id/btn_History_Collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Collection"/>

    <Button
        android:id="@+id/btn_History_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/LookAnswer"/>

</RelativeLayout>